Fix message text overflow

--- a/css/html_instruct_style.css
+++ b/css/html_instruct_style.css
@@ -7,6 +7,7 @@
     padding-right: 20px;
     display: flex;
     flex-direction: column-reverse;
+    word-break: break-word;
 }
 
 .message {
